# discordmcp-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/instructions/: common.instructions.md  rust.instructions.md
src/: main.rs
