[package]
name = "discordmcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "^0.14.0", features = ["server", "transport-io", "schemars"] }
reqwest = { version = "^0.13.2", features = ["json"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
tokio = { version = "^1.49.0", features = ["macros", "rt-multi-thread"] }
toml = "^0.9.8"
schemars = "1.2.0"
